# autoflow

./: .env.example  .gitignore  .tasks_state.yaml  README.md  autoflow.spec  conftest.py  idea.md  main.py  phase_alignment.md  pyproject.toml  refactoring_roadmap.md  refactoring_tasks.yaml  requirements.txt  run_autoflow.bat  tasks.yaml
.github/workflows/: ci.yml
src/: __init__.py
src/engine/: __init__.py  actions.py  runner.py
src/ui/: __init__.py  main_window.py  tray_icon.py
src/utils/: __init__.py  config.py  hotkeys.py
src/vision/: __init__.py  image_match.py  ocr.py
tasks/: task-p1-01.yaml  task-p1-02.yaml  task-p1-03.yaml  task-p1-04.yaml  task-p1-05.yaml  task-p1-06.yaml  task-p2-01.yaml  task-p2-02.yaml  task-p2-03.yaml  task-p2-04.yaml  task-p2-05.yaml  task-p3-01.yaml  task-p3-02.yaml  task-p3-03.yaml  task-p3-04.yaml  task-p4-01.yaml  task-p4-02.yaml  task-p4-03.yaml  task-p5-01.yaml  task-p5-02.yaml  task-refactor-p1-01.yaml  task-refactor-p1-02.yaml  task-refactor-p1-03.yaml  task-refactor-p2-01.yaml  task-refactor-p2-02.yaml  task-refactor-p3-01.yaml  task-refactor-p3-02.yaml  task-refactor-p3-03.yaml
tests/: test_actions.py  test_config.py  test_hotkeys.py  test_image_match.py  test_main_window.py  test_ocr.py  test_runner.py  test_spec.py  test_tray_icon.py
